InvoicingAssignment/src/objects/Invoice_Header__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Payment_Date__c</fullName>
        <label>Actual Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_To_Customer__c</fullName>
        <label>Email_To_Customer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_Date__c</fullName>
        <label>Estimated Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selling_Date__c</fullName>
        <label>Selling Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CreatedFieldValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNULL(CreatedDate),

OR(TODAY() &lt;= Selling_Date__c,
TODAY() &gt; Estimated_Payment_Date__c,
TODAY() &gt;  Actual_Payment_Date__c), 

OR(DATEVALUE(CreatedDate) &lt;= Selling_Date__c,
DATEVALUE(CreatedDate)  &gt; Estimated_Payment_Date__c,
DATEVALUE(CreatedDate) &gt;  Actual_Payment_Date__c))</errorConditionFormula>
        <errorMessage>Selling Date must be earlier than Created Date, and Created Date must be earlier or the same than Estimated Payment Date &amp; Actual Payment Date</errorMessage>
    </validationRules>
</CustomObject>